--- a/style.css
+++ b/style.css
@@ -9,21 +9,31 @@
 /* navbar */
 
 .background {
+    position: relative; 
+    padding-bottom: 800px;
+}
+
+.background::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-image: url("photo/FOTO KOPI.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    padding-bottom: 600px;
-    z-index: -20;
+    z-index: -1; 
 }
 
 .navbar-kopium {
     display: flex;
     justify-content: space-between;
-    position: sticky;
     z-index: 1000;
     top: 0;
     width: 100%;
+    background-color: #7d6038;
 }
 
 .navbar-kopium img {    
