--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     font-family: 'poor richard';
     src: url('font/poor-richard/PoorRichardOpti.otf');
 }
+@import url('https://fonts.googleapis.com/css2?family=Poly:ital@0;1&display=swap');
 
 * {
     box-sizing: border-box;
@@ -38,68 +39,64 @@ body {
 }
 
 .navbar-kopium {
+    position: sticky;   
+    top: 0;             
+    z-index: 1000;
     display: flex;
     justify-content: space-between;
-    z-index: 1000;
-    top: 0;
+    align-items: center;
     width: 100%;
     background-color: #533914;
+    padding: 15px 45px;
 }
+
+.sticky-shadow {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.3);
+    transition: 0.3s;
+}
+
 
 .navbar-kopium img {    
     width: 100px;
     height: auto;
-    padding-left: 45px;
 }
-
 
 .nav {
     display: flex;
-    padding-bottom: 5px;
+    gap: 40px; 
 }
 
 .nav-link {
-    /* INI KUNCINYA */
     position: relative;
-    display: inline-block; /* Wajib untuk tag <a> */
-  
-    /* Bikin rapi (opsional) */
+    display: inline-block;
     text-decoration: none;
-    color: #333;
-    padding: 5px 5px; /* Beri jarak atas-bawah dan kiri-kanan */
-    font-weight: bold;
-  }
+    color: #FFF0DB;
+    font-size: 1.3rem;
+    font-weight: 800;
+    font-family: poppins;
+    text-align: center;
+    padding: 10px 0;    
+}
+.nav-link:hover {
+    color: #ffb042;
+    transition: 0.4s ease;
+}
+
 
 .nav-link::after {
     content: "";
     position: absolute;
-    border-radius: 2px;
     bottom: 0;
-    left: 0;
+    left: 50%;
     width: 100%;
     height: 2px;
-    background-color: #000000;
-    transform: scaleX(0);
+    background-color: #000;
+    transform: translateX(-50%) scaleX(0); 
     transition: transform 0.3s ease;
-  }
-  
-  .nav-link:hover::after {
-    transform: scaleX(1);
-  }
-
-.nav a {
-    color: #FFF0DB;
-    text-decoration: none;
-    padding-right: 40px;
-    padding-top: 30px;
-    font-size: 1.3rem;
-    font-weight: 800;
-    font-family: poppins;
 }
 
-.nav a:hover {
-    color: #ffb042;
-    transition: 0.5s ease-in;
+.nav-link:hover::after {
+    transform: translateX(-50%) scaleX(1);
 }
 
 /* Home */
@@ -134,9 +131,7 @@ body {
     border-radius: 35px;
     color: white;
     cursor: pointer;
-    width: 88px;
-    height: 28px;
-    padding: 19px 45px;
+    padding: 12px 40px;
 }
 
 .btn h1 {
@@ -152,77 +147,75 @@ body {
 /* story */
 
 .story {
-    font-family: 'poor richard', serif;
-    padding: 130px 50px; 
-    background-color: #f7f3e8;
     min-height: 100vh;
+    margin-left:  50px ;
+    margin-right: 50px;
+    margin-top: 220px;
+    margin-bottom: px;
+    font-family: 'Poor Richard', serif;
 }
 
 .story-container {
     display: grid;
-    grid-template-columns: 1fr 1fr; 
-    gap: 83px;
-    max-width: 1200px;
-    margin: 0 auto;
+    grid-template-columns: 1fr 1fr;
+    gap: 85px;
 }
 
+/* kiri kanan */
 .content-left {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    margin-left: 250px;
 }
-
-        
 .content-right {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
 }
 
-        
 .quote1 {
-    width: 586px;
-    padding-bottom: 112px;
-}
-        
-.quote1 p {
-    font-family: 'Poor Richard', serif;
-    font-weight: 400;
-    font-size: 30px;
-    color: #000000;
+    width: 545px;
+    height: 135px;
 }
 
 .quote2 {
-    width: 586px;
-    padding-top: 100px;
-}
-.quote2 p {
-    font-family: 'Poor Richard', serif;
-    font-weight: 400;
-    font-size: 30px;
-    color: #000000;
-    text-align: left;
+    width: 545px;
+    height: 135px;
 }
 
-.content-right img {
-    width: 613px; 
-    height: 420px;
-    align-self: flex-end;
+.quote1 p, .quote2 p {
+    font-family: 'Poor Richard', serif;
+    font-size: 36px;
+    font-weight: 400;
+    color: #000000;
+    line-height: 1.3;
 }
 
 .content-left img {
-    width: 613px; 
+    width: 613px;
     height: 420px;
-    align-self: flex-start;
+    object-fit: cover;
+    margin-top: 112px;
+}
+
+.content-right img {
+    width: 613px;
+    height: 420px;
+    object-fit: cover;
+    margin-bottom: 100px;
 }
 
 /* tentang kopium */
 
 .tentang-kopium {
-    margin-top: 100px;
     display: flex;
     justify-content: center;
+    gap: 75px; /* Jarak antara teks & video */
     background-color: #F0BB79;
 }
 
+/* Bagian teks */
 .tentang {
     padding-top: 100px;
     padding-bottom: 100px;
@@ -234,10 +227,14 @@ body {
     padding-bottom: 30px;
 }
 
-.tentang h3 {
-    font-weight: 500;
-    max-width: 1000px;
+.tentang p {
+    font-family: 'poly', serif;
+    font-weight: 400;
+    width: 676px;
+    height: 253px;
     padding-bottom: 30px;
+    font-size: 20px;
+    line-height: 30px;
 }
 
 .tentang button {
@@ -250,8 +247,14 @@ body {
 }
 
 .tentang button:hover {
-    transition: 0.5ms ease-in;
+    transition: 0.5s ease-in;
     background-color: #312616;
+}
+
+
+.videow iframe {
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 /* testimoni */
